# contrib-protobufs

./: .gitignore  .indent.pro  CMakeLists.txt  Makefile.in  Makefile.mak  README.md  config.h.cmake  configure.ac  configure.in  eventually_implies.pl  pltotex.pl  protobufs.c  protobufs.doc  protobufs.pl  protobufs_check.pl  protobufs_overview.md  protobufs_overview.txt  some_message.proto  some_message.py  test_bootstrap.sh  test_interop.sh  test_protobufs.pl
bootstrap/: .gitignore  Makefile  README.md  common.mk  descriptor.proto.segment  descriptor_proto.pl  descriptor_proto_expand.pl  parse_descriptor_proto_dump.pl  protoc-gen-prolog  protoc-gen-prolog0  protoc-gen-swipl  protoc-gen-swipl0  tests.pl
bootstrap/gen_pb/: README.md
bootstrap/gen_pb/google/protobuf/: descriptor_pb.pl
bootstrap/protoc_gen_prolog_pb/: README.md  descriptor_pb.pl  plugin_pb.pl
demo/: .gitignore  Makefile  README.md  addressbook.proto  addressbook.proto.segment  addressbook2.proto  descriptor.proto.dump  descriptor.proto.segment  descriptor_proto.pl  descriptor_proto_expand.pl  foo.cpp  parse_descriptor_proto_dump.pl  pb-vector.proto  vector_demo.pl  xml_example.py
interop/: .gitignore  Makefile  README.md  addressbook.pl  addressbook.proto  scalar_test.proto  scalar_test_common.pl  scalar_test_read.cc  scalar_test_read.pl  scalar_test_read.py  scalar_test_write.cc  scalar_test_write.pl  scalar_test_write.py  test.proto  test1.pl  test1.proto  test1.py  test2.proto  test2b.proto  test_common.pl  test_interop.pl  test_read.cc  test_read.pl  test_read.py  test_templates.pl  test_write.cc  test_write.pl  test_write.py
